--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <p>Click the "Submit" button and the form-data will be sent to a page on the 
 server called "action_page.php".</p>
-
+	
+<button type="button" onclick="myFunction()">Click Me!</button>
+	
 </body>
 </html>
 
