--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ server called "action_page.php".</p>
 
 <script>
 function myFunction() {
-	
+	window.alert("sometext");
 	const fruits = ["apple", "orange", "cherry"];
 	fruits.forEach(myFunction);
 	
