--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ server called "action_page.php".</p>
 function myFunction() {
 	window.alert("sometext");
 	const fruits = ["apple", "orange", "cherry"];
-	fruits.forEach(myFunction);
+	fruits.forEach((element) => addOption(element));
 	
 }
 
